--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/strapi": "4.12.4",
     "better-sqlite3": "8.5.0",
     "pg": "^8.11.2",
-    "pg-connection-string": "^2.6.2"
+    "pg-connection-string": "^2.6.2",
+    "sqlite3": "^5.1.6"
   },
   "author": {
     "name": "A Strapi developer"
