--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.12.4",
     "@strapi/strapi": "4.12.4",
     "better-sqlite3": "8.5.0",
+    "node-gyp": "^9.4.0",
     "pg": "^8.11.2",
     "pg-connection-string": "^2.6.2",
     "sqlite3": "^5.1.6"
