--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "uuid": "a66cf946-7fc9-4d09-8412-30f6374f143d"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=12.x.x <=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
